add an input field and submit button to index.html

--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
 </head>
 <body>
   <div class="container">
+    <h1>Beep Boop</h1>
+  <form id="">
+    <label for="">Enter A Number</label>
+    <input id="" type="text">
+    <button type="submit">Submit</button>
+  <div id="result">
+    <p></p>
+  </div>
 
-    
+
+    </form>
     <!-- container div below -->
   </div>
 </body>
