--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
   <div class="container">
     <h1>Beep Boop</h1>
-  <form id="">
+  <form id="robot">
     <label for="">Enter A Number</label>
     <input id="" type="text">
     <button type="submit">Submit</button>
-  <div id="result">
-    <p></p>
+  <div>
+    <p id="result">hidden test</p>
   </div>
 
 
