add working loop for numerical input 0 to users input number

--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
   <div class="container">
     <h1>Beep Boop</h1>
   <form id="robot">
-    <label for="">Enter A Number</label>
-    <input id="" type="text">
+    <label for="number">Enter A Number</label>
+    <input id="number" type="text">
     <button type="submit">Submit</button>
-  <div>
-    <p id="result">hidden test</p>
+
+  <div id="output">
+    <p id="result"></p>
   </div>
-
-
     </form>
     <!-- container div below -->
   </div>
