--- a/index.html
+++ b/index.html
@@ -6,22 +6,26 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/bootstrap-3.3.7-dist 2/css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Archivo+Black&display=swap" rel="stylesheet">
   <script src="js/jquery-3.4.1 (1).js"></script>
   <script src="js/scripts.js"></script>
   <title>Beep Boop</title>
 </head>
 <body>
   <div class="container">
-    <h1>Beep Boop</h1>
+    <h1>PILOT SYNC</h1>
+    
   <form id="robot">
-    <label for="number">Enter A Number</label>
-    <input id="number" type="text">
-    <button type="submit">Submit</button>
-
+    <!-- <label for="number"></label> -->
+    <div class="form">
+    <input id="number" type="text" placeholder="ENTER A NUMBER">
+    <button type="submit">SYNC</button>
+</div>
   <div id="output">
     <p id="result"></p>
   </div>
     </form>
+    <img class= "sync" src="img/pilotsync2.gif" alt="sync">
     <!-- container div below -->
   </div>
 </body>
