add error message if not a number, still under construction

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <link href="https://fonts.googleapis.com/css?family=Archivo+Black&display=swap" rel="stylesheet">
   <script src="js/jquery-3.4.1 (1).js"></script>
   <script src="js/scripts.js"></script>
-  <title>Beep Boop</title>
+  <title>EVANGELION PILOT SYNC</title>
 </head>
 <body>
   <div class="container">
-    <h1>PILOT SYNC</h1>
-    
+    <h1>PILOT-SYNC</h1>
+    <h2>SYNCHRONIZE WITH YOUR EVANGELION</h2>
   <form id="robot">
     <!-- <label for="number"></label> -->
     <div class="form">
@@ -26,6 +26,10 @@
   </div>
     </form>
     <img class= "sync" src="img/pilotsync2.gif" alt="sync">
+    <div id="sync2">
+    <p>ERROR. ERROR. SUIT UP AND TRY AGAIN. ERROR. ERROR.</p>
+    <img class="sync2" src="img/error.txt" alt="sync2">
+  </div>
     <!-- container div below -->
   </div>
 </body>
